tests/sksl/errors/UnassignedOutParameter.glsl
### Compilation failed:

error: 4: function 'testOut' never assigns a value to out parameter 'b'
error: 4: function 'testOut' never assigns a value to out parameter 'c'
2 errors
